<resources>
    <string name="app_name">SoundMood</string>
    <string name="spotify_text">Spotify</string>
    <string name="tagline">Sounding \nyour mood\nwith\nSound Mood</string>
    <string name="login_description">Login with your Spotify account</string>
    <string name="register_description">Doesn\'t have Spotify account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bottom_menu">Home</string>
    <string name="add_bottom_menu">Add</string>
    <string name="history_bottom_menu">History</string>
    <string name="capture_image_page">Capture Image Page</string>
    <string name="home_page">Home page</string>
    <string name="profile_page">Profile Page</string>
    <string name="logout">Logout</string>
    <string name="recommendation_track">Recommendation Track</string>
    <string name="welcome">Welcome,</string>
    <string name="go_to_spotify">Go to Spotify</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_history">Your History</string>
    <string name="placeholder_name">Flora Shafiqa</string>
    <string name="placeholder_id">ID : 1234</string>
    <string name="button_homepage">Get Your Mood!</string>
    <string name="weekly_title_homepage">Weekly\'s Favorite Mood</string>
    <string name="profile_image">profile image</string>
    <string name="homepage_description_title">How\'s Your Mood today?</string>
    <string name="homepage_page_description">Choose your mood to get suitable music \nrecommendations.</string>
    <string name="weekly_favorite_mood_placeholder">mood</string>
    <string name="homepage_recommendation_title">Recommendation for You</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="user_name">User Name</string>
    <string name="playlist">playlist</string>
    <string name="export">Export</string>
    <string name="back">back</string>
    <string name="here_are_your_playlist">here are your playlist</string>
    <string name="let_s_take_a_selfie">let\'s take a selfie</string>
    <string name="tap_the_camera_button_to_take_the_selfie">tap the camera button to take the selfie</string>
    <string name="artist_name">Artist Name</string>
    <string name="track_name">Track Name</string>
    <string name="play">Play</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="album_name">Album Name</string>
    <string name="album_cover">Album Cover</string>
    <string name="genarate">Generate</string>
    <string name="this_is_the_result">This is The Result!</string>
    <string name="congratulations_this_is_your_mood">Congratulations, this is your mood!</string>
    <string name="lets_take_a_selfie">Lets Take a Selfie</string>
    <string name="tap_the_camera_button_to_take_selfie">Tap the Camera Button to Take Selfie</string>
    <string name="here_is_your_playlist_track">Here is Your Playlist Track</string>
    <string name="this_is_our_playlist_recommendation_for_you">This is our playlist recommendation for you</string>
    <string name="mood">Mood</string>
    <string name="loading_white">Loading White</string>
    <string name="all_your_latest_playlist">All your latest playlist</string>
    <string name="lets_get_started">Lets Get Started!</string>
</resources>