<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_album_cover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/illustration_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_name"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_album_cover"
            app:layout_constraintStart_toEndOf="@+id/iv_album_cover"
            app:layout_constraintTop_toTopOf="@+id/iv_album_cover"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/tvArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            app:layout_constraintStart_toStartOf="@+id/tvTrackName"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackName" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>