<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.profilepage.ProfilePageFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cl_profile"
        >
        <ImageView
            android:id="@+id/imageview_profile"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:src="@drawable/startingpage1"
            android:background="@drawable/roundimage"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/imageview_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            >
            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleTextStyle"
                android:text="@string/placeholder_name"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/tvUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_id"
                android:layout_marginTop="-8dp"
                style="@style/SubTitleTextStyle"
                android:textSize="12sp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btn_gotoSpotify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button"
        style="@style/CustomButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/cl_profile"
        android:text="@string/go_to_spotify"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <TextView
        android:id="@+id/tv_darkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dark_mode"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gotoSpotify" />

    <Switch
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_darkmode"
        app:layout_constraintEnd_toEndOf="@+id/btn_gotoSpotify"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_darkmode"
        app:layout_constraintTop_toTopOf="@+id/tv_darkmode"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_darkmode"
        android:id="@+id/tv_about"
        android:text="@string/about"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"/>
    <LinearLayout
        android:id="@+id/linearlayout_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_about"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="24sp"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_medium"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/sign_out"
            android:src="@drawable/stash_signout_light"
            />


    </LinearLayout>


    <!-- TODO: Update blank fragment layout -->

</androidx.constraintlayout.widget.ConstraintLayout>